--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .cabecalho {
     background-color: #000000;
     color: white;
@@ -8,12 +7,12 @@
 }
 
 .cabecalho-imagem {
-    width: 10%;
+    width: 18%;
 }
 
 .cabecalho-lista-item {
     display: inline-block;
-    margin: 27px 16px;
+    margin: 0 16px;
     padding: 10px 0;
     font-size: 22px;
 }
