--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .cabecalho {
     background-color: #000000;
-    color: white;
+    color: rgb(19, 18, 18);
     display: flex;
     justify-content: space-around;
     padding: 18px 0;
@@ -21,3 +21,19 @@
     margin: 0;
     padding: 0;
 }
+
+.escola-imagem{
+    width:35%;
+}
+
+.escola{
+    color:rgb(17, 19, 19);
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding: 24px 0;
+}
+.escola {
+    background-image: linear-gradient (#383D58,#00c0eb);
+    }
+    
